extends Node

@onready var projectile_sfx: AudioStreamPlayer = $ProjectileSFX
@onready var level_sfx: AudioStreamPlayer = $LevelSFX
@onready var menu_sfx: AudioStreamPlayer = $MenuSFX
@onready var level_complete_sfx: AudioStreamPlayer = $LevelCompleteSFX
@onready var game_over_sfx: AudioStreamPlayer = $GameOverSFX
